@@ -19,8 +19,8 @@
 <!-- For the regular version (with TTS), the versionCode must be odd. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="279"
-        android:versionName="2015.04.07a (TTS)"
+        android:versionCode="281"
+        android:versionName="2015.04.22a (TTS)"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.4 (19). -->
